# google_ads_mcp

./: .dockerignore  .env.example  .env.prod.example  .gitignore  =3.10  Dockerfile  alembic.ini  claude_desktop_config.json  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
agents/: ad_fatigue_monitor.py  anomaly_detector.py  base.py  budget_pacing_monitor.py  creative_performance_ranker.py  scheduler.py  search_terms_agent.py  weekly_digest.py
alembic/: env.py
alembic/versions/: 45c2e0ad6e5c_initial_schema.py
backend/: database.py  main.py  resolver.py
backend/facebook/: auth.py  reporting.py
backend/google_ads/: ad_copy.py  auth.py  campaigns.py  keywords.py  reporting.py  search_term_classifier.py
backend/models/: schemas.py
backend/notifications/: cliq.py
backend/reports/: ytd_excel.py
docs/: BUILD_ROADMAP.md  Installation_guide.md  deployment_plan.md  facebook_plan.md  google_ads_mcp_build_doc.docx  google_ads_tools_documentation.md  new_plan.md  new_plan_phase1.md  tech_build_doc.md  usage_doc.md
mcp_server/: client.py  server.py
scripts/: generate_refresh_token.py  seed_accounts.py
secrets/: self_client (1).json  self_client.json
